Letter spacing setted correctly

--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -74,9 +74,10 @@
 }
 
 .titleBanner {
-  letter-spacing: 2.5;
+  letter-spacing: 1.5px;
   font-size: 16px;
   color: $blue-2-color;
+  font-weight: 500;
 }
 
 .txtBanner {
