--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,15 @@
 @import "global.scss";
 
+* {
+  font-family: "Montserrat", sans-serif !important;
+}
+
 body {
   background-color: $blue-1-color;
   margin: 0;
   overflow-x: hidden !important;
   font-size: 13px;
-  font-family: "Montserrat", sans-serif;
+
   // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   //   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   //   sans-serif;
